<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom">
        <menu
            android:background="?attr/colorSurface">
            <item
...
        android:title=""
        app:showAsAction="always">
        <menu
            android:background="?attr/colorSurface"
            >
            <item
                android:id="@+id/action_edit_recipe"
                android:icon="@drawable/ic_edit"
                android:title="@string/edit_recipe" />
            <item
                android:id="@+id/action_delete_recipe"
                android:icon="@drawable/ic_delete"
                android:title="@string/delete_recipe" />
        </menu>
    </item>
    
</menu>
